fix(ci): use xvfb-action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,6 @@ jobs:
           node-version: "16.13.1"
       - run: npm install
       - run: npm run build
-      - run: npm run test
+      - uses: GabrielBB/xvfb-action@v1.0
+        with:
+          run: npm run test
