--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,18 @@ jobs:
       - uses: GabrielBB/xvfb-action@v1.0
         with:
           run: npm run test
+  release:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16.13.1"
+      - run: npm install
+      - run: npm run build
+      - run: npm install -g vsce
+      - run: vsce package
+      - uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: vscode-content-converter-extension-*.vsix
