--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16.13.1"
-      - run: npm install
+      - run: npm ci
       - run: npm run prettier:check
   test:
     runs-on: ubuntu-20.04
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16.13.1"
-      - run: npm install
+      - run: npm ci
       - run: npm run build
       - uses: GabrielBB/xvfb-action@v1.0
         with:
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16.13.1"
-      - run: npm install
+      - run: npm ci
       - run: npm run build
       - run: npm install -g vsce
       - run: npx vsce package
