--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-content-converter-extension",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "homepage": "https://github.com/hi-ogawa/vscode-content-converter-extension",
   "repository": {
     "type": "git",
